Some doocumentation and javadoc cleanup